--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,10 +4,51 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="../scss/styles.scss">
+	<script type="module" src="../js/bundle.js"></script>
 	<title>ShortCSS</title>
 </head>
 <body>
-	
-	<script src="../js/bundle.js"></script>
+
+	<div class="container">
+		<div class="row">
+			<!-- * 12 Columnas -->
+			<div class="col-lg-1"><div class="box">Col 1</div></div>
+			<div class="col-lg-1"><div class="box">Col 1</div></div>
+			<div class="col-lg-1"><div class="box">Col 1</div></div>
+			<div class="col-lg-1"><div class="box">Col 1</div></div>
+			<div class="col-lg-1"><div class="box">Col 1</div></div>
+			<div class="col-lg-1"><div class="box">Col 1</div></div>
+			<div class="col-lg-1"><div class="box">Col 1</div></div>
+			<div class="col-lg-1"><div class="box">Col 1</div></div>
+			<div class="col-lg-1"><div class="box">Col 1</div></div>
+			<div class="col-lg-1"><div class="box">Col 1</div></div>
+			<div class="col-lg-1"><div class="box">Col 1</div></div>
+			<div class="col-lg-1"><div class="box">Col 1</div></div>
+			<!-- * 6 Columnas -->
+			<div class="col-lg-2"><div class="box">Col 2</div></div>
+			<div class="col-lg-2"><div class="box">Col 2</div></div>
+			<div class="col-lg-2"><div class="box">Col 2</div></div>
+			<div class="col-lg-2"><div class="box">Col 2</div></div>
+			<div class="col-lg-2"><div class="box">Col 2</div></div>
+			<div class="col-lg-2"><div class="box">Col 2</div></div>
+			<!-- * 6 Columnas -->
+			<div class="col-lg-3"><div class="box">Col 3</div></div>
+			<div class="col-lg-3"><div class="box">Col 3</div></div>
+			<div class="col-lg-3"><div class="box">Col 3</div></div>
+			<div class="col-lg-3"><div class="box">Col 3</div></div>
+			<!-- * 3 Columnas -->
+			<div class="col-lg-4"><div class="box">Col 4</div></div>
+			<div class="col-lg-4"><div class="box">Col 4</div></div>
+			<div class="col-lg-4"><div class="box">Col 4</div></div>
+			<!-- * 2 Columnas -->
+			<div class="col-lg-6"><div class="box">Col 6</div></div>
+			<div class="col-lg-6"><div class="box">Col 6</div></div>
+			<!-- * 1 Columnas -->
+			<div class="col-lg-12"><div class="box">Col 12</div></div>
+			<!-- * Offset  -->
+			<div class="col-xxl-6 offset-xxl-3"><div class="box">Col 4</div></div>
+		</div>
+	</div>
 </body>
 </html>
