--- a/src/index.html
+++ b/src/index.html
@@ -4,44 +4,52 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/styles.css">
-	<script src="js/bundle.js"></script>
+	<link rel="stylesheet" href="scss/styles.scss">
+	<script type="module" src="js/bundle.js"></script>
 	<title>Short CSS</title>
 </head>
 <body>
 
+	<!-- * Buttos -->
+	<section class="py-5">
+		<div class="container">
+			<h2 class="headline-1 my-2">Buttons </h2>
+
+			<div class="row">
+				<div class="col-lg-6 col-md-3 col-sm-3 col-xs-12">
+					<a href="#" class="btn btn-primary">Buntton Primary</a>
+				</div>
+
+				<div class="col-lg-6 col-md-3 col-sm-3 col-xs-12">
+					<a href="#" class="btn btn-secondary">Buntton Secondary</a>
+				</div>
+
+				<!-- <div class="col-lg-3 col-md-2 col-sm-3 col-xs-12">
+					<a href="#" class="btn btn-success">Buntton Success</a>
+				</div>
+
+				<div class="col-lg-3 col-md-2 col-sm-3 col-xs-12">
+					<a href="#" class="btn btn-info">Buntton Info</a>
+				</div>
+
+				<div class="col-lg-3 col-md-2 col-sm-3 col-xs-12">
+					<a href="#" class="btn btn-danger">Buntton Danger</a>
+				</div>
+
+				<div class="col-lg-3 col-md-2 col-sm-3 col-xs-12">
+					<a href="#" class="btn btn-warning">Buntton Warning</a>
+				</div>
+
+				<div class="col-lg-3 col-md-2 col-sm-3 col-xs-12">
+					<a href="#" class="btn btn-dark">Buntton Dark</a>
+				</div> -->
+			</div>
+		</div>
+	</section>
+
 	<div class="container">
 
 		<div class="row">
-			<!-- * 12 Columnas -->
-			<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12">
-				<a href="#" class="btn btn-primary-o">Buntton Primary</a>
-			</div>
-
-			<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12">
-				<a href="#" class="btn btn-secondary">Buntton Secondary</a>
-			</div>
-
-			<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12">
-				<a href="#" class="btn btn-info">Buntton Info</a>
-			</div>
-
-			<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12">
-				<a href="#" class="btn btn-danger">Buntton Danger</a>
-			</div>
-
-			<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12">
-				<a href="#" class="btn btn-warning-o">Buntton Warning</a>
-			</div>
-
-			<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12">
-				<a href="#" class="btn btn-dark">Buntton Dark</a>
-			</div>
-			<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12">
-				<a href="#" class="btn btn-success-o">Buntton Success</a>
-			</div>
-
-
 			<!-- <div class="col-lg-8 offset-lg-2 col-sm-12 col-xs-12">
 				<div class="box">
 					<h2 class="headline-1">Headline 1</h2>
