--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
 	<div class="container">
 
 		<div class="row">
-			<!-- <div class="col-lg-8 offset-lg-2 col-sm-12 col-xs-12">
+			<div class="col-lg-8 offset-lg-2 col-sm-12 col-xs-12">
 				<div class="box">
 					<h2 class="headline-1">Headline 1</h2>
 				</div>
@@ -79,7 +79,7 @@
 				<div class="box">
 					<h2 class="headline-6">Headline 6</h2>
 				</div>
-			</div> -->
+			</div>
 			<!-- <div class="col-lg-1"><div class="box">Col 1</div></div>
 			<div class="col-lg-1"><div class="box">Col 1</div></div>
 			<div class="col-lg-1"><div class="box">Col 1</div></div>
